API client implemented

--- a/ProductAPI.Host/ProductAPI.Host.csproj
+++ b/ProductAPI.Host/ProductAPI.Host.csproj
@@ -10,10 +10,20 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Microsoft.Orleans.Client" Version="2.0.3" />
+    <PackageReference Include="Microsoft.Orleans.Core" Version="2.0.3" />
+    <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Orleans.OrleansCodeGenerator.Build" Version="2.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="2.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ProductAPI.GrainInterfaces\ProductAPI.GrainInterfaces.csproj" />
+    <ProjectReference Include="..\ProductAPI.Models\ProductAPI.Models.csproj" />
   </ItemGroup>
 
 </Project>
